--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ ext {
 
 dependencies {
   compile 'com.google.dagger:dagger:2.6.1'
+    compile 'com.google.code.findbugs:jsr305:latest.release'
+    compile 'com.google.guava:guava:19.0'
 
   testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
   testCompile "junit:junit:${JUNIT_VERSION}"
