--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ group 'com.bdl'
 version '1.0-SNAPSHOT'
 
 repositories {
-  mavenCentral()
-  jcenter()
-  maven { url "https://jitpack.io" }
+    mavenCentral()
+    jcenter()
+    maven { url "https://jitpack.io" }
 }
 
 apply plugin: 'java'
@@ -26,48 +26,51 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 ext {
-  JUNIT_VERSION = '4.2'
-  GOOGLE_TRUTH_VERSION = '0.28'
+    JUNIT_VERSION = '4.2'
+    GOOGLE_TRUTH_VERSION = '0.28'
 }
 
 dependencies {
-  compile 'com.google.dagger:dagger:2.6.1'
+    compile 'com.google.auto.value:auto-value:1.3-rc2'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
 
-  testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
-  testCompile "junit:junit:${JUNIT_VERSION}"
+    testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
+    testCompile "junit:junit:${JUNIT_VERSION}"
+    testCompile files('C:\\Java\\jdks\\jdk1.8.0_92\\lib\\tools.jar')
 
-  apt 'com.google.dagger:dagger-compiler:2.6.1'
-  testApt 'com.google.dagger:dagger-compiler:2.6.1'
+    apt 'com.google.auto.value:auto-value:1.3-rc2'
+    testApt 'com.google.auto.value:auto-value:1.3-rc2'
+//    testApt 'com.google.guava:guava:19.0'
+//    testApt files('build/libs/auto-adapter-1.0-SNAPSHOT.jar')
 }
 
 javadoc {
-  failOnError false
+    failOnError false
 }
 
 task jarSources(type: Jar) {
-  baseName project.name
-  classifier = 'src'
-  destinationDir = file('build/libs')
-  from 'src/main/java/'
+    baseName project.name
+    classifier = 'src'
+    destinationDir = file('build/libs')
+    from 'src/main/java/'
 }
 
 task jarDocs(type: Jar) {
-  dependsOn javadoc
-  baseName project.name
-  classifier = 'javadoc'
-  destinationDir = file('build/libs')
-  from 'build/docs/javadoc/'
+    dependsOn javadoc
+    baseName project.name
+    classifier = 'javadoc'
+    destinationDir = file('build/libs')
+    from 'build/docs/javadoc/'
 }
 
 task copyJars(type: Copy) {
-  dependsOn jar, jarSources, jarDocs
-  from 'build/libs'
-  include '*.jar'
-  into '../build/libs'
+    dependsOn jar, jarSources, jarDocs
+    from 'build/libs'
+    include '*.jar'
+    into '../build/libs'
 }
 
 build {
-  dependsOn copyJars
+    dependsOn copyJars
 }
