--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,11 @@ dependencies {
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
-    testCompile files('C:\\Java\\jdks\\jdk1.8.0_92\\lib\\tools.jar')
 
     apt 'com.google.auto.value:auto-value:1.3-rc2'
     testApt 'com.google.auto.value:auto-value:1.3-rc2'
-//    testApt 'com.google.guava:guava:19.0'
-//    testApt files('build/libs/auto-adapter-1.0-SNAPSHOT.jar')
+    testApt 'com.google.guava:guava:19.0'
+    testApt files('build/libs/auto-adapter-1.0-SNAPSHOT.jar')
 }
 
 javadoc {
@@ -71,6 +70,6 @@ task copyJars(type: Copy) {
     into '../build/libs'
 }
 
-build {
+compileTestJava {
     dependsOn copyJars
 }
