--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
+    testCompile files('C:\\Java\\jdks\\jdk1.8.0_92\\lib\\tools.jar')
 
     apt 'com.google.auto.value:auto-value:1.3-rc2'
     testApt 'com.google.auto.value:auto-value:1.3-rc2'
