--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'net.ltgt.apt'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 ext {
     JUNIT_VERSION = '4.2'
@@ -37,6 +37,7 @@ dependencies {
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
+    testCompile 'com.google.testing.compile:compile-testing:0.5'
     testCompile files('C:\\Java\\jdks\\jdk1.8.0_92\\lib\\tools.jar')
 
     apt 'com.google.auto.value:auto-value:1.3-rc2'
