Alright, removing these and we'll re-add with the desired hierarchy.

--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ task jarDocs(type: Jar) {
 
 task copyDocs(type: Copy) {
     dependsOn javadoc
-    from 'build/docs'
+    from 'build/docs/javadoc'
     into 'docs'
 }
 
