--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     compile 'com.google.auto.value:auto-value:1.3-rc2'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
+    compile 'com.github.bdleitner:common-annotation-processing:0.1.1'
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
     testCompile 'com.google.testing.compile:compile-testing:0.5'
-    testCompile files('C:\\Java\\jdks\\jdk1.8.0_92\\lib\\tools.jar')
 
     apt 'com.google.auto.value:auto-value:1.3-rc2'
     testApt 'com.google.auto.value:auto-value:1.3-rc2'
