--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'maven'
 apply plugin: 'net.ltgt.apt'
 
 sourceCompatibility = 1.8
@@ -34,11 +35,7 @@ dependencies {
     compile 'com.google.auto.value:auto-value:1.3-rc2'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
-//    compile fileTree(
-//        dir: 'C:\\projects\\java\\common-annotation-processing\\build\\libs',
-//        include: '*.jar'
-//    )
-    compile 'com.github.bdleitner:common-annotation-processing:0.2.2'
+    compile 'com.github.bdleitner:common-annotation-processing:-SNAPSHOT'
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
