--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile 'com.google.auto.value:auto-value:1.3-rc2'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
-    compile 'com.github.bdleitner:common-annotation-processing:-SNAPSHOT'
+    compile 'com.github.bdleitner:common-annotation-processing:0.2.5'
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
