--- a/build.gradle
+++ b/build.gradle
@@ -50,28 +50,17 @@ javadoc {
     failOnError false
 }
 
-task jarSources(type: Jar) {
-    baseName project.name
-    classifier = 'src'
-    destinationDir = file('build/libs')
-    from 'src/main/java/'
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
 }
 
-task jarDocs(type: Jar) {
-    dependsOn javadoc
-    baseName project.name
+task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
-    destinationDir = file('build/libs')
-    from 'build/docs/javadoc/'
+    from javadoc.destinationDir
 }
 
-task copyJars(type: Copy) {
-    dependsOn jar, jarSources, jarDocs
-    from 'build/libs'
-    include '*.jar'
-    into '../build/libs'
-}
-
-build {
-    dependsOn copyJars
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
