--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ ext {
 }
 
 dependencies {
-    compile 'com.google.auto.value:auto-value:1.3-rc2'
+    compile 'com.google.auto.value:auto-value:1.3'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
     compile 'com.github.bdleitner:common-annotation-processing:0.3.0'
@@ -41,8 +41,8 @@ dependencies {
     testCompile "junit:junit:${JUNIT_VERSION}"
     testCompile 'com.google.testing.compile:compile-testing:0.5'
 
-    apt 'com.google.auto.value:auto-value:1.3-rc2'
-    testApt 'com.google.auto.value:auto-value:1.3-rc2'
+    apt 'com.google.auto.value:auto-value:1.3'
+    testApt 'com.google.auto.value:auto-value:1.3'
     testApt 'com.google.guava:guava:19.0'
 }
 
