--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,11 @@ buildscript {
     }
 }
 
-group 'com.bdl'
+group 'com.bdl.auto'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
     maven { url "https://jitpack.io" }
@@ -35,7 +36,7 @@ dependencies {
     compile 'com.google.auto.value:auto-value:1.3'
     compile 'com.google.code.findbugs:jsr305:latest.release'
     compile 'com.google.guava:guava:19.0'
-    compile 'com.github.bdleitner:common-annotation-processing:0.3.1'
+    compile 'com.bdl.annotation.processing:common-annotation-processing:1.0-SNAPSHOT'
 
     testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
     testCompile "junit:junit:${JUNIT_VERSION}"
