--- a/build.gradle
+++ b/build.gradle
@@ -9,59 +9,63 @@ buildscript {
     }
 }
 
-group 'com.bdl.auto'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter()
-    maven { url "https://jitpack.io" }
+allprojects {
+    group 'com.bdl.auto'
+    version '1.0-SNAPSHOT'
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'maven'
-apply plugin: 'net.ltgt.apt'
+subprojects {
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
 
-ext {
-    JUNIT_VERSION = '4.2'
-    GOOGLE_TRUTH_VERSION = '0.28'
-}
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'maven'
+    apply plugin: 'net.ltgt.apt'
 
-dependencies {
-    compile 'com.google.auto.value:auto-value:1.3'
-    compile 'com.google.code.findbugs:jsr305:latest.release'
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.bdl.annotation.processing:common-annotation-processing:1.0-SNAPSHOT'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
-    testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
-    testCompile "junit:junit:${JUNIT_VERSION}"
-    testCompile 'com.google.testing.compile:compile-testing:0.5'
+    ext {
+        JUNIT_VERSION = '4.2'
+        GOOGLE_TRUTH_VERSION = '0.32'
+    }
 
-    apt 'com.google.auto.value:auto-value:1.3'
-    testApt 'com.google.auto.value:auto-value:1.3'
-    testApt 'com.google.guava:guava:19.0'
-}
+    dependencies {
+        compile 'com.google.auto.value:auto-value:1.4'
+        compile 'com.google.code.findbugs:jsr305:latest.release'
+        compile 'com.google.guava:guava:19.0'
 
-javadoc {
-    failOnError false
-}
+        testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
+        testCompile "junit:junit:${JUNIT_VERSION}"
+        testCompile 'com.google.testing.compile:compile-testing:0.5'
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+        apt 'com.google.auto.value:auto-value:1.4'
+        testApt 'com.google.auto.value:auto-value:1.4'
+        testApt 'com.google.guava:guava:19.0'
+    }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
+    javadoc {
+        failOnError false
+    }
 
-artifacts {
-    archives sourcesJar
-    archives javadocJar
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier = 'javadoc'
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives sourcesJar
+        archives javadocJar
+    }
 }
