--- a/build.gradle
+++ b/build.gradle
@@ -1,71 +1,74 @@
 buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
     }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.8"
-    }
+  }
+  dependencies {
+    classpath "net.ltgt.gradle:gradle-apt-plugin:0.8"
+  }
 }
 
 allprojects {
-    group 'com.bdl.auto'
-    version '1.0-SNAPSHOT'
+  group 'com.bdl.auto'
+  version '1.0-SNAPSHOT'
 }
 
 subprojects {
 
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
+  repositories {
+    mavenLocal()
+    mavenCentral()
+    jcenter()
+    maven { url "https://jitpack.io" }
+  }
 
-    apply plugin: 'java'
-    apply plugin: 'idea'
-    apply plugin: 'maven'
-    apply plugin: 'net.ltgt.apt'
+  apply plugin: 'java'
+  apply plugin: 'idea'
+  apply plugin: 'maven'
+  apply plugin: 'net.ltgt.apt'
 
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+  sourceCompatibility = 1.7
+  targetCompatibility = 1.7
 
-    ext {
-        JUNIT_VERSION = '4.12'
-        GOOGLE_TRUTH_VERSION = '0.32'
-    }
+  ext {
+    JUNIT_VERSION = '4.12'
+    GOOGLE_TRUTH_VERSION = '0.32'
+  }
 
-    dependencies {
-        compile 'com.google.auto.value:auto-value:1.4'
-        compile 'com.google.code.findbugs:jsr305:latest.release'
-        compile 'com.google.guava:guava:19.0'
+  dependencies {
+    compile 'com.google.code.findbugs:jsr305:latest.release'
+    compile 'com.google.guava:guava:19.0'
 
-        testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
-        testCompile "junit:junit:${JUNIT_VERSION}"
-        testCompile 'com.google.testing.compile:compile-testing:0.5'
+    compileOnly 'com.google.auto.value:auto-value:1.4.1'
 
-        apt 'com.google.auto.value:auto-value:1.4'
-        testApt 'com.google.auto.value:auto-value:1.4'
-        testApt 'com.google.guava:guava:19.0'
-    }
+    testCompile "com.google.truth:truth:${GOOGLE_TRUTH_VERSION}"
+    testCompile "junit:junit:${JUNIT_VERSION}"
+    testCompile 'com.google.testing.compile:compile-testing:0.5'
 
-    javadoc {
-        failOnError false
-    }
+    testCompileOnly 'com.google.auto.value:auto-value:1.4.1'
 
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
+    apt 'com.google.auto.value:auto-value:1.4.1'
+    testApt 'com.google.auto.value:auto-value:1.4.1'
+    testApt 'com.google.guava:guava:19.0'
+  }
 
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    }
+  javadoc {
+    failOnError false
+  }
 
-    artifacts {
-        archives sourcesJar
-        archives javadocJar
-    }
+  task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+  }
+
+  task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+  }
+
+  artifacts {
+    archives sourcesJar
+    archives javadocJar
+  }
 }
